--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jkphl/micrometa",
+  "name": "tammyd/micrometa",
   "description": "A PHP meta parser for extracting embedded micro information out of HTML documents, currently supporting Microformats (1 + 2) and W3C Microdata",
   "require": {
     "php": ">=5.3.0",
